opam-version: "2.0"
maintainer: "dave@recoil.org"
authors: "David Scott"
license: "ISC"
tags: "org:mirage"
homepage: "https://github.com/mirage/mirage-block-ramdisk"
doc: "https://mirage.github.io/mirage-block-ramdisk/"
bug-reports: "https://github.com/mirage/mirage-block-ramdisk/issues"
depends: [
  "ocaml" {>= "4.06.0"}
  "dune"
  "alcotest" {with-test}
  "cstruct" {>= "6.0.0"}
  "io-page" {>= "2.4.0"}
  "mirage-block" {>= "2.0.0"}
  "mirage-block-combinators" {with-test}
  "lwt"
  "fmt" {with-test & >= "0.8.7"}
]
build: [
 [ "dune" "subst" ] {dev}
 [ "dune" "build" "-p" name "-j" jobs ]
 [ "dune" "runtest" "-p" name "-j" jobs ] {with-test}
]
dev-repo: "git+https://github.com/mirage/mirage-block-ramdisk.git"
synopsis: "In-memory BLOCK device for MirageOS"
description: """
- Can be dynamically resized
- Supports querying sparseness information
"""
x-maintenance-intent: [ "(latest)" ]
